--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.19.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
